css/main.css
/* ... */
pre.highlight, .highlight > pre, td.code pre {
  background-color: #FAFAFA;
  background-image: linear-gradient(#FDFDFD 50%, #F7F9FF 50%);
  background-repeat: repeat;
  background-size: 3em 3em;
  background-position: 0px 5px;
  border-left: 5px solid #9AC;
  padding: 5px 7px;
}
code table, code table td, code table th, code table tbody, code table tr,
td.gutter pre {
  padding: 0;
  border: none;
  background-color: #fff;
}
td.code pre {
  border-width: 0 0 0 2px;
  border-style: solid;
  border-color: #444;
  border-radius: 0;
}
td.gutter {
  padding-top: 3px;
}

/* --- Social media sharing section --- */

#social-share-section {
  margin-bottom: 30px;
}

/* --- Notification boxes --- */
.box-note, .box-warning, .box-error {
  padding: 15px 15px 15px 10px;
  margin: 20px 20px 20px 5px;
  border: 1px solid #eee;
  border-left-width: 5px;
  border-radius: 5px 3px 3px 5px;
}

.box-note {
  background-color: #eee;
  border-left-color: #2980b9;
}

.box-warning {
  background-color: #fdf5d4;
  border-left-color: #f1c40f;
}

.box-error {
  background-color: #f4dddb;
  border-left-color: #c0392b;
}

/* Fix table border github gist snippets */

.gist, .gist-file table tr {
  border: unset;
}

.gist, .gist-file table tr td {
  border: unset;
}

/* Fix .navbar-toggle */

.navbar-default button.navbar-toggle:focus,
.navbar-default button.navbar-toggle:hover {
  background-color: initial;
}

.navbar-default button.navbar-toggle[aria-expanded="true"] {
  background-color: rgba(0, 0, 0, 0.2);
}

.email-obfuscation span:nth-child(2n){
  display: none;
}

.footer-donation-addr {
  margin-bottom: 1em;
}
.footer-donation-addr a {
  font-size: 0.8vw
}
@media only screen and (max-width: 1400px) {
  .footer-donation-addr a {
    font-size: 1.7vw
  }
}
@media only screen and (max-width: 600px) {
  .footer-donation-addr a {
    font-size: 2.9vw
  }
}

.sponsor-container {
  display: flex;
  align-items: baseline;
  justify-content: center;
  flex-wrap: wrap;
}

.sponsor {
  margin: 10px 30px;
}

.subnav {
  flex: 1;
  font-size: 14px;
  min-width: 150px;
}
.subnav h3 {
  font-size: 18px;
  margin: 5px;
  text-transform: uppercase;
}
.subnav h3:hover {
  cursor: pointer;
}
.subnav li {
  list-style-type: none;
}

.subnav-header {
}

.subnav-drawer {
}

.subnav-selected {
  text-decoration: underline;
  font-size: 1.15em;
}

.subnav-strong-link {
  font-size: 18px;
  font-weight: bold;
  margin: 0px 0px 20px 5px;
}

.subnav-strong-link:before {
  margin-right: 5px;
}

.js-hidden {
  max-height: 0;
  overflow: hidden;
}

.flex-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin: 120px 10px 0 10px;
}
@media only screen and (min-width: 768px) and (max-width: 1000px) {
  .flex-container {
    margin-top: 150px;
  }
}
@media only screen and (max-width: 768px) {
  .flex-container {
    margin-top: 60px;
  }
}

.flex-content {
  flex: 1 1 0;
  width: 100%;
  max-width: 1000px;
}

.flex-row {
  flex: 1 100%;
}

.doc-index-table {
  width: 100%;
  font-size: 1.7vh;
}

